--- a/account/teacher/edit-teacher.html
+++ b/account/teacher/edit-teacher.html
@@ -314,7 +314,7 @@
                   <div class="col-12 col-lg-12 ml-auto mr-auto mb-4">
                     <div class="d-flex flex-wrap multitabs-form__progress">
                       <button class="multitabs-form__progress-btn js-active" type="button" title="Student Info">Teacher Profile</button>
-                      <button class="multitabs-form__progress-btn" type="button" title="Guardian Info">Employment Details  <span class='card-class-status-label'>Admin</span></button>
+                      <button class="multitabs-form__progress-btn" type="button" title="Guardian Info">Employment Details</button>
                     </div>
                   </div>
                 </div>
